# tenhou-log-parser

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  issue.md  plan.md  renovate.json  rustfmt.toml  task.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: context.md  design_and_testing.md  mjlog_io_spec.md  parser_io_spec.md  setup.md
scripts/: coverage.sh
src/: error.rs  lib.rs  main.rs  models.rs  parser.rs  tile.rs
tests/: e2e_test.rs  helpers.rs  integration_test.rs
tests/data/: sample.xml  sample_complex.mjlog  sample_complex.xml
