[package]
name = "tenhou-log-parser"
version = "0.1.0"
edition = "2021"
authors = ["Seiya Sakata"]
description = "A parser for Tenhou mjlog files to JSON conversion"
license = "MIT"

[[bin]]
name = "tenhou-log-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
quick-xml = "=0.31.0"
log = "=0.4.29"
env_logger = "=0.11.9"
anyhow = "=1.0.101"
thiserror = "=2.0.18"
clap = { version = "=4.5.60", features = ["derive"] }
flate2 = "=1.1.9"
encoding_rs = "=0.8.35"
uuid = { version = "=1.21.0", features = ["v4"] }
percent-encoding = "=2.3.2"

[dev-dependencies]
tempfile = "=3.25.0"